--- a/nflpoolsite/src/App.css
+++ b/nflpoolsite/src/App.css
@@ -34,17 +34,12 @@
   float: right;
 }
 
-.game .teams .winner,
-.game .scores .winner {
-
-}
-
 .logo {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 35px;
+  max-height: 35px;
 }
 
 .winner {
